Fix mobile spacing issues for header

--- a/src/components/WireframeSphere/WireframeSphere.css
+++ b/src/components/WireframeSphere/WireframeSphere.css
@@ -20,16 +20,16 @@
 /* Responsive design for tablet */
 @media (max-width: 800px) {
   #canvas-container {
-    width: 12.5rem;
-    height: 12.5rem;
+    width: 12rem;
+    height: 12rem;
   }
 }
 
 /* Responsive design for large mobile */
 @media (max-width: 600px) {
   #canvas-container {
-    width: 10rem;
-    height: 10rem;
+    width: 9rem;
+    height: 9rem;
   }
 }
 
